--- a/app.env
+++ b/app.env
@@ -1,3 +1,8 @@
+
 EMAIL_SENDER_NAME=AUTH GO TEST
 SENDER_EMAIL_ADDRESS=mailyhai814@gmail.com
 EMAIL_SENDER_PASSWORD=xnog anph lvqy tfga
+
+
+
+SECRET_KEY='blabla'
