jwt, access token, refresh token

--- a/app.env
+++ b/app.env
@@ -5,4 +5,5 @@ EMAIL_SENDER_PASSWORD=xnog anph lvqy tfga
 
 
 
-SECRET_KEY='blabla'
+ACCESS_KEY_SECRET='access_key'
+REFRESH_KEY_SECRET='refresh_key'
