fix bug, tự động tạo db

--- a/app.env
+++ b/app.env
@@ -7,3 +7,9 @@ EMAIL_SENDER_PASSWORD=xnog anph lvqy tfga
 
 ACCESS_KEY_SECRET='access_key'
 REFRESH_KEY_SECRET='refresh_key'
+
+DB_USER=root
+DB_PASS=strong_password
+DB_HOST=localhost
+DB_PORT=8080
+DB_NAME=auth_go_api
