--- a/app.env
+++ b/app.env
@@ -9,7 +9,7 @@ ACCESS_KEY_SECRET='access_key'
 REFRESH_KEY_SECRET='refresh_key'
 
 DB_USER=root
-DB_PASS=strong_password
+DB_PASS=123456
 DB_HOST=localhost
 DB_PORT=8080
 DB_NAME=auth_go_api
