cấu hình docker

--- a/app.env
+++ b/app.env
@@ -9,7 +9,7 @@ ACCESS_KEY_SECRET='access_key'
 REFRESH_KEY_SECRET='refresh_key'
 
 DB_USER=root
-DB_PASS=123456
+DB_PASS=root
 DB_HOST=localhost
-DB_PORT=8080
-DB_NAME=auth_go_api
+DB_PORT=3306
+DB_NAME=spax
